@@ -6,6 +6,7 @@ Application Fixes:
 - Fixed a regression in the behaviour of the cyberadeptdaemon improvement that prevented Resonance being awarded for fractional losses of Essence. In effect, this improvement was only being counted if you had an integer value of CyberwareEssence. Your Resonance will be adjusted on next Submersion, or if you activate the Reapply Improvements menu option.
 - Fixed an issue where attempting to edit a basic lifestyle would cause the lifestyle level to not get properly saved.
 - Changing priorities or metatypes in Create mode will no longer reset all points and karma put into attributes.
+- Fixed a bug where special attributes would not update properly with changes to the Special priority category.
 
 Data Changes:
 
